--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d docs",
     "preview": "vite preview",
     "postbuild": "node scripts/after-build.cjs"
   },
