--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "node scripts/after-build.cjs",
     "deploy": "gh-pages -d docs",
-    "preview": "vite preview",
-    "postbuild": "node scripts/after-build.cjs"
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,6 @@
     "install": "^0.13.0",
     "npm": "^11.5.2",
     "sass": "^1.91.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.4"
   }
 }
