--- a/package.json
+++ b/package.json
@@ -14,10 +14,20 @@
   "dependencies": {
     "colcade": "^0.2.0"
   },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not IE 11",
+    "iOS >= 12",
+    "Safari >= 12",
+    "Samsung >= 9"
+  ],
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "install": "^0.13.0",
     "npm": "^11.5.2",
-    "sass": "^1.91.0",
+    "postcss": "^8.5.6",
+    "sass": "^1.92.0",
     "vite": "^7.1.4"
   }
 }
