--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,33 +17,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
+          node-version: 22
 
-      # funktioniert mit oder ohne package-lock.json
-      - name: Install deps
-        run: npm ci --no-audit --no-fund || npm install --no-audit --no-fund
-
-      # falls SCSS benutzt wird, ist "sass" nötig
-      - name: Ensure sass
-        run: npm ls sass || npm i -D sass
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build
         run: npm run build
 
-      - name: SPA 404 fallback
-        run: cp docs/index.html docs/404.html
-
-      - name: Ensure CNAME
-        run: test -f docs/CNAME || echo hoaschoaf.com > docs/CNAME
-
-      - uses: actions/upload-pages-artifact@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: ./docs
+          path: ./dist
 
   deploy:
     needs: build
